--- a/Tangerine/Tangerine/Tangerine.csproj
+++ b/Tangerine/Tangerine/Tangerine.csproj
@@ -957,6 +957,9 @@
     <Content Include="Areas\Module08\Views\web.config" />
     <Content Include="Areas\Module09\Views\web.config" />
     <Content Include="Areas\Module10\Views\web.config" />
+    <Content Include="Areas\Module09\Views\_ViewStart.cshtml" />
+    <Content Include="Areas\Module09\Views\Shared\_Layout.cshtml" />
+    <Content Include="Areas\Module09\Views\Pagos\Index.cshtml" />
     <None Include="Areas\Template\Assets\dist\js\jquery-1.10.2.intellisense.js" />
     <Content Include="Areas\Template\Assets\dist\js\jquery-1.10.2.js" />
     <Content Include="Areas\Template\Assets\dist\js\jquery-1.10.2.min.js" />
@@ -982,6 +985,7 @@
     <Compile Include="Areas\Module06\Module06AreaRegistration.cs" />
     <Compile Include="Areas\Module07\Module07AreaRegistration.cs" />
     <Compile Include="Areas\Module08\Module08AreaRegistration.cs" />
+    <Compile Include="Areas\Module09\Controllers\PagosController.cs" />
     <Compile Include="Areas\Module09\Module09AreaRegistration.cs" />
     <Compile Include="Areas\Module10\Module10AreaRegistration.cs" />
     <Compile Include="Areas\Template\Controllers\AdminLTEController.cs" />
@@ -1030,9 +1034,7 @@
     <Folder Include="Areas\Module08\Controllers\" />
     <Folder Include="Areas\Module08\Models\" />
     <Folder Include="Areas\Module08\Views\Shared\" />
-    <Folder Include="Areas\Module09\Controllers\" />
     <Folder Include="Areas\Module09\Models\" />
-    <Folder Include="Areas\Module09\Views\Shared\" />
     <Folder Include="Areas\Module10\Controllers\" />
     <Folder Include="Areas\Module10\Models\" />
     <Folder Include="Areas\Module10\Views\Shared\" />
